--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^11.10.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.3",
     "next": "15.3.5",
